<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="@dimen/small_app_margin"
    app:cardElevation="8dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/small_app_margin"
            android:layout_width="96dp"
            android:layout_height="96dp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="@dimen/small_app_margin"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/test_title_character_item"/>

        <TextView
            android:id="@+id/speciesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="@dimen/small_app_margin"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/species"/>

        <TextView
            android:id="@+id/species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="@dimen/small_app_margin"
            app:layout_constraintStart_toEndOf="@id/speciesTitle"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/test_species_character_item"/>

        <TextView
            android:id="@+id/genderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="@dimen/small_app_margin"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/speciesTitle"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/gender"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="@dimen/small_app_margin"
            app:layout_constraintStart_toEndOf="@id/genderTitle"
            app:layout_constraintTop_toBottomOf="@id/speciesTitle"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/test_male"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

