<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details_character.DetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/small_app_margin"
        android:layout_width="250dp"
        android:layout_height="250dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/test_title_character_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/genderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toEndOf="@id/genderTitle" />

    <TextView
        android:id="@+id/EpisodesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:text="@string/episodes"
        app:layout_constraintTop_toBottomOf="@id/genderTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toEndOf="@id/EpisodesTitle" />

    <TextView
        android:id="@+id/StatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@id/EpisodesTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/episodes"
        app:layout_constraintStart_toEndOf="@id/StatusTitle" />

    <TextView
        android:id="@+id/speciesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:text="@string/species_"
        app:layout_constraintTop_toBottomOf="@id/StatusTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/status"
        app:layout_constraintStart_toEndOf="@id/speciesTitle" />

    <TextView
        android:id="@+id/LocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:text="@string/latest_location"
        app:layout_constraintTop_toBottomOf="@id/speciesTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/species"
        app:layout_constraintStart_toEndOf="@id/LocationTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>